--- a/dotfiles/picom.conf
+++ b/dotfiles/picom.conf
@@ -5,17 +5,10 @@ opacity-rule = [
 ]
 
 # Activar la opción de desvanecimiento (fade)
-fade-in-step = 0.03
-fade-out-step = 0.03
-fade-delta = 2
-no-fading-openclose = false
-
-# Habilitar sombra en las ventanas (opcional)
-shadow = true
-shadow-radius = 12
-shadow-offset-x = -15
-shadow-offset-y = -15
-shadow-opacity = 0.5
+# fade-in-step = 0.03
+# fade-out-step = 0.03
+# fade-delta = 2
+# no-fading-openclose = false
 
 # Desactivar el comportamiento de ventana sin bordes (opcional, pero recomendado para un efecto más limpio)
 use-client-leader = true
