--- a/dotfiles/picom.conf
+++ b/dotfiles/picom.conf
@@ -1,3 +1,4 @@
+backend = "glx"
 # Habilitar el modo de fondo transparente
 opacity-rule = [
     "90:class_g = 'Alacritty'",  # 90 es el valor de opacidad (0 es completamente transparente, 100 es completamente opaco)
